--- a/coding_test/Greedy_training.ipynb
+++ b/coding_test/Greedy_training.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "e50d2df6",
+   "id": "b4d7c37f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "e61fce3f",
+   "id": "f78f10e1",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "6848713c",
+   "id": "85ef9a04",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdc0ecc3",
+   "id": "86ada05b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "2f032a7e",
+   "id": "7b2654c5",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a63c67a7",
+   "id": "fbbed005",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "a3984d22",
+   "id": "78812a75",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "670b0399",
+   "id": "4a9036ea",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b72eb44",
+   "id": "517b38d9",
    "metadata": {},
    "source": [
     "# 다시!"
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 377,
-   "id": "7955b611",
+   "id": "8e91bacc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +248,8 @@
     "    reserve = reserve.difference(inter)\n",
     "    lost = lost.difference(inter)\n",
     "    \n",
-    "    print(lost)\n",
-    "    print(reserve)\n",
-    "    \n",
+    "#     print(lost)\n",
+    "#     print(reserve)\n",
     "    \n",
     "    for r in reserve: \n",
     "        for l in lost :\n",
@@ -271,25 +270,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
-   "id": "4b6a32f6",
+   "execution_count": 383,
+   "id": "def6c1a1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2, 4}\n",
-      "{1, 3, 5}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "5"
+       "-2"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 383,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,25 +291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
-   "id": "64db24b6",
+   "execution_count": 384,
+   "id": "24402e1b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1}\n",
-      "{3}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,17 +312,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
-   "id": "8495c3e9",
+   "execution_count": 385,
+   "id": "2de453a2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "-1"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "d808046d",
+   "id": "39fc066c",
    "metadata": {},
    "outputs": [
     {
@@ -378,27 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
-   "id": "b0efd16e",
+   "execution_count": 381,
+   "id": "6bdbe2b7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{5, 6}\n",
-      "{9, 3, 4}\n"
+     "ename": "TypeError",
+     "evalue": "'set' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-381-4699aa1c5aba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mreserve\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0msolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlost\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mreserve\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-380-feaa363c4210>\u001b[0m in \u001b[0;36msolution\u001b[0;34m(n, lost, reserve)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m#     print(reserve)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mr\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreserve\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlost\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'set' object is not subscriptable"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 367,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -409,9 +386,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "021bfc77",
+   "metadata": {},
+   "source": [
+    "# 복사본으로 돌리기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "id": "d1a1c361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(n, lost, reserve):\n",
+    "    answer = 0\n",
+    "    absent = len(lost)\n",
+    "    \n",
+    "    reserve = set(reserve)\n",
+    "    lost = set(lost)\n",
+    "    \n",
+    "    inter = reserve.intersection(lost)\n",
+    "    reserve = list(reserve.difference(inter))\n",
+    "    lost = list(lost.difference(inter))\n",
+    "    \n",
+    "    for r in reserve[:]: \n",
+    "        for l in lost[:] :\n",
+    "            if r-1 == l or l == r+1:\n",
+    "                lost.remove(l)\n",
+    "                reserve.remove(r)\n",
+    "                break\n",
+    "                \n",
+    "    answer = n - len(lost)\n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9aadd93",
+   "id": "dfc4d0d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65ccdb7",
    "metadata": {},
    "outputs": [],
    "source": []
