--- a/coding_test/Greedy_bigNumber.ipynb
+++ b/coding_test/Greedy_bigNumber.ipynb
@@ -8,9 +8,33 @@
    "outputs": [],
    "source": [
     "def solution(number, k):\n",
-    "    p\n",
+    "    \n",
     "    answer = ''\n",
-    "    return answer"
+    "    num = []\n",
+    "    bigList = {}\n",
+    "\n",
+    "    k = len(number)-k\n",
+    "    \n",
+    "    for i in number:\n",
+    "        num.append(int(i))      \n",
+    "\n",
+    "    num.reverse()\n",
+    "    print(max(num))\n",
+    "     \n",
+    "    for _ in range(k):\n",
+    "      print(max(num))\n",
+    "      bigList[num.index(max(num))] = max(num)\n",
+    "      num.remove(max(num))\n",
+    "\n",
+    "    print(bigList)\n",
+    "    order = sorted(bigList.keys())\n",
+    "    \n",
+    "    for i in order :\n",
+    "      answer += str(bigList[i])      \n",
+    "  \n",
+    "    return answer\n",
+    "\n",
+    "print(solution('1231234',3))"
    ]
   },
   {
