--- a/coding_test/BruteForce_test.ipynb
+++ b/coding_test/BruteForce_test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "c44611d0",
+   "execution_count": 135,
+   "id": "ad39f9a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,22 +34,22 @@
     "    ans = np.where(points==max(points))[0]+1\n",
     "#     print(type(answer))\n",
     "#     print(type(answer))\n",
-    "    return ans"
+    "    return list(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "e26b0b97",
+   "execution_count": 136,
+   "id": "3c7fa5e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1])"
+       "[1]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,17 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "58bd1164",
+   "execution_count": 137,
+   "id": "6d4233ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 2, 3])"
+       "[1, 2, 3]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,6 +78,14 @@
    "source": [
     "solution([[1,3,2,4,2]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c8c4e93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
