--- a/coding_test/BruteForce_carpet.ipynb
+++ b/coding_test/BruteForce_carpet.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "314db474",
+   "execution_count": 43,
+   "id": "78850f6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,10 @@
     "    horizontal = 0\n",
     "    vetical = 0\n",
     "    for i in range(length) :\n",
-    "#         print(i)\n",
-    "#         print(\"length-1: \",length-i)\n",
-    "#         print(\"(0+i) : \",0+i)\n",
-    "#         print(\"yellow: \", (length-i)*(0+i))\n",
-    "#         print((length-i)*(0+i))\n",
     "        if yellow == (length-i)*(0+i):\n",
     "            horizontal = length-i\n",
     "            vetical = 0 + i\n",
     "            break\n",
-    "    print(horizontal, \",\", vetical)\n",
     "    answer = [horizontal+2, vetical+2]\n",
     "    \n",
     "    return answer"
@@ -30,24 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "c5127d53",
-   "metadata": {},
+   "execution_count": 44,
+   "id": "0abb774f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2 , 2\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[4, 4]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,22 +44,6 @@
    "source": [
     "solution(12,4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74689fbf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78a78ef5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
