--- a/coding_test/BruteForce_test.ipynb
+++ b/coding_test/BruteForce_test.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "id": "ad39f9a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "def solution(answers):\n",
-    "    # answer = []\n",
     "    \n",
     "    stds = [[1, 2, 3, 4, 5],\n",
     "            [2, 1, 2, 3, 2, 4, 2, 5],\n",
@@ -31,15 +30,13 @@
     "            std3Point+= 1\n",
     "            \n",
     "    points = np.array([std1Point, std2Point, std3Point])\n",
-    "    ans = np.where(points==max(points))[0]+1\n",
-    "#     print(type(answer))\n",
-    "#     print(type(answer))\n",
-    "    return list(ans)"
+    "    answer = np.where(points==max(points))[0]+1\n",
+    "    return answer.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "id": "3c7fa5e2",
    "metadata": {},
    "outputs": [
@@ -49,7 +46,7 @@
        "[1]"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "id": "6d4233ca",
    "metadata": {},
    "outputs": [
@@ -70,7 +67,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
