--- a/coding_test/DFSandBFS.ipynb
+++ b/coding_test/DFSandBFS.ipynb
@@ -2,45 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4aa0883a",
+   "execution_count": 236,
+   "id": "d48d895c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 6 1\n",
+      "1 4\n",
+      "1 3\n",
+      "1 2\n",
+      "4 6\n",
+      "4 5\n",
+      "2 7\n",
+      "1 2 7 3 4 5 6\n",
+      "1 2 3 4 7 5 6\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "\n",
-    "condition = list(map(int,input().split()))\n",
+    "node, line, start = list(map(int,input().split()))\n",
+    "\n",
     "graphDict = {0:[]}\n",
-    "visitDict = {}\n",
+    "visitDictd = {}\n",
+    "visitDictb = {}\n",
     "order = []\n",
     "\n",
-    "def dfs(graph, start, visit):\n",
-    "    visit[start] = True\n",
-    "    order.append(start)\n",
-    "    for i in graph[start]:\n",
-    "        print(i)\n",
-    "        if visit[i] == False:\n",
-    "            try :\n",
-    "                dfs(graph, i, visit)\n",
-    "            except :\n",
-    "                continue\n",
+    "def dfs(graph, start, visitd):\n",
+    "    visitd[start] = True\n",
+    "    order.append(str(start))\n",
+    "    try : \n",
+    "        for i in graph[start]:\n",
+    "            if visitd[i] == False:\n",
+    "                try :\n",
+    "                    dfs(graph, i, visitd)\n",
+    "                except :\n",
+    "                    continue\n",
+    "    except :\n",
+    "        return []\n",
     "    return order\n",
     "\n",
-    "def bfs(graph, start, visit):\n",
-    "    visit[start] = True\n",
-    "    order.append(start)\n",
-    "    \n",
-    "    while len(order) != condition[0]:\n",
-    "        check = deque()\n",
-    "        for i in graph[start]:\n",
-    "            if visit[i] == False:\n",
-    "                order.append(i)\n",
-    "                check.append(i)\n",
-    "        start = check.popleft()\n",
-    "    print(order)\n",
+    "def bfs(graph, start, visitb):\n",
+    "    visitb[0] = True\n",
+    "    visitb[start] = True\n",
+    "    order.append(str(start))\n",
+    "    check = deque()\n",
+    "    try : \n",
+    "        while list(visitb.values()).count(True) != len(graphDict.keys()):\n",
+    "            for i in graph[start]:\n",
+    "                if visitb[i] == False:\n",
+    "                    visitb[i] = True\n",
+    "                    order.append(str(i))\n",
+    "                    check.append(i)\n",
+    "            if len(check) != 0:\n",
+    "                start = check.popleft()\n",
+    "    except :\n",
+    "        return []\n",
+    "    return order\n",
+    "        \n",
     "\n",
     "#graphDict 만들기\n",
-    "for i in range((condition[1])):\n",
+    "for i in range(line):\n",
     "    tmp = list(map(int,input().split()))\n",
     "    try :\n",
     "        graphDict[tmp[0]].append(tmp[1])\n",
@@ -57,18 +83,29 @@
     "    graphDict[i[0]] = sorted(i[1]) #정렬\n",
     "    \n",
     "for i in graphDict.keys():\n",
-    "    visitDict[i] = False\n",
-    "    \n",
-    "print(visitDict)\n",
-    "print(graphDict)\n",
+    "    visitDictd[i] = False\n",
+    "    visitDictb[i] = False\n",
     "\n",
-    "bfs(graphDict, condition[2], visitDict)"
+    "res_dfs = dfs(graphDict, start, visitDictd)\n",
+    "print(\" \".join(res_dfs))\n",
+    "\n",
+    "order = []\n",
+    "res_bfs = bfs(graphDict, start, visitDictb)\n",
+    "print(\" \".join(res_bfs))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a262a0c",
+   "id": "ed956577",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5b6b3d1",
    "metadata": {},
    "outputs": [],
    "source": []
