--- a/coding_test/bfsdfs_targetNumber.ipynb
+++ b/coding_test/bfsdfs_targetNumber.ipynb
@@ -2,42 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 252,
    "id": "205f427f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "def solution(numbers, target):\n",
     "    answer = 0\n",
-    "    numbers = np.array(numbers)\n",
-    "    number_minus = numbers * (-1)\n",
-    "    number_plus = numbers\n",
-    "    candidate = []\n",
-    "    print(number_minus)\n",
+    "    result = [[] for i in range(len(numbers))]\n",
+    "    result.append([0])\n",
+    "\n",
+    "    for idx, item in enumerate(numbers):\n",
+    "        for r_item in result[idx-1]:\n",
+    "            result[idx]\n",
+    "            result[idx].append(r_item + item)\n",
+    "            result[idx].append(r_item - item)\n",
+    "                \n",
+    "    answer = result[-2].count(target)\n",
+    "    \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 253,
    "id": "e01f93e5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1 -1 -1 -1 -1]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0"
+       "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 248,
    "id": "8b824307",
    "metadata": {},
    "outputs": [],
@@ -57,51 +55,392 @@
     "from collections import deque\n",
     "tmp = 0\n",
     "numbers = deque([1,1,1,1,1])\n",
-    "result = [[0],[],[],[],[],[]]\n",
+    "result = [[] for i in range(len(numbers))]\n",
+    "result.append([0])\n",
     "target = 3\n",
     "\n",
     "def makeGraph(): \n",
-    "    cnt = 0\n",
-    "    while cnt != len(numbers):\n",
-    "        for idx, item in enumerate(numbers):\n",
-    "            if idx > 0 :\n",
-    "                for r_idx, r_item in enumerate(result[idx-1]):\n",
-    "                    result[idx].append(r_item + item)\n",
-    "                    result[idx].append(r_item - item)\n",
-    "            cnt += 1\n",
-    "            print(result)\n",
-    "    \n",
+    "    for idx, item in enumerate(numbers):\n",
+    "        for r_idx, r_item in enumerate(result[idx-1]):\n",
+    "            result[idx].append(r_item + item)\n",
+    "            result[idx].append(r_item - item)\n",
+    "    return result\n",
+    "\n",
+    "answer = makeGraph().count(target)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 249,
    "id": "410d244d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, -1, 1, -1],\n",
+       " [2, 0, 0, -2, 2, 0, 0, -2, 2, 0, 0, -2],\n",
+       " [3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3],\n",
+       " [4,\n",
+       "  2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  -2,\n",
+       "  -4,\n",
+       "  4,\n",
+       "  2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  -2,\n",
+       "  -4,\n",
+       "  4,\n",
+       "  2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  -2,\n",
+       "  -4,\n",
+       "  4,\n",
+       "  2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  -2,\n",
+       "  -4,\n",
+       "  4,\n",
+       "  2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  2,\n",
+       "  0,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  0,\n",
+       "  -2,\n",
+       "  -2,\n",
+       "  -4],\n",
+       " [5,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -3,\n",
+       "  -5,\n",
+       "  5,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -3,\n",
+       "  -5,\n",
+       "  5,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -3,\n",
+       "  -5,\n",
+       "  5,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -3,\n",
+       "  -5,\n",
+       "  5,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -3,\n",
+       "  -5,\n",
+       "  5,\n",
+       "  3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  3,\n",
+       "  1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  1,\n",
+       "  -1,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -1,\n",
+       "  -3,\n",
+       "  -3,\n",
+       "  -5],\n",
+       " [0]]"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "dc6abe0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[4].count(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "5e74bd7f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0], [], [], [], [], []]\n",
-      "[[0], [1, -1], [], [], [], []]\n",
-      "[[0], [1, -1], [2, 0, 0, -2], [], [], []]\n",
-      "[[0], [1, -1], [2, 0, 0, -2], [3, 1, 1, -1, 1, -1, -1, -3], [], []]\n",
-      "[[0], [1, -1], [2, 0, 0, -2], [3, 1, 1, -1, 1, -1, -1, -3], [4, 2, 2, 0, 2, 0, 0, -2, 2, 0, 0, -2, 0, -2, -2, -4], []]\n"
+      "[1, -1]\n",
+      "---\n",
+      "[2, 0, 0, -2]\n",
+      "---\n",
+      "[3, 1, 1, -1, 1, -1, -1, -3]\n",
+      "---\n",
+      "[4, 2, 2, 0, 2, 0, 0, -2, 2, 0, 0, -2, 0, -2, -2, -4]\n",
+      "---\n",
+      "[5, 3, 3, 1, 3, 1, 1, -1, 3, 1, 1, -1, 1, -1, -1, -3, 3, 1, 1, -1, 1, -1, -1, -3, 1, -1, -1, -3, -1, -3, -3, -5]\n",
+      "---\n",
+      "[0]\n",
+      "---\n"
      ]
     }
    ],
-   "source": [
-    "makeGraph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e74bd7f",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "for i in result:\n",
     "    print(i)\n",
@@ -110,54 +449,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 225,
    "id": "686b6f1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4,\n",
-       " 2,\n",
-       " 2,\n",
-       " 0,\n",
-       " 2,\n",
-       " 0,\n",
-       " 0,\n",
-       " -2,\n",
-       " 2,\n",
-       " 0,\n",
-       " 0,\n",
-       " -2,\n",
-       " 0,\n",
-       " -2,\n",
-       " -2,\n",
-       " -4,\n",
-       " 4,\n",
-       " 2,\n",
-       " 2,\n",
-       " 0,\n",
-       " 2,\n",
-       " 0,\n",
-       " 0,\n",
-       " -2,\n",
-       " 2,\n",
-       " 0,\n",
-       " 0,\n",
-       " -2,\n",
-       " 0,\n",
-       " -2,\n",
-       " -2,\n",
-       " -4]"
+       "[5,\n",
+       " 3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 1,\n",
+       " -1,\n",
+       " 3,\n",
+       " 1,\n",
+       " 1,\n",
+       " -1,\n",
+       " 1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -3,\n",
+       " 3,\n",
+       " 1,\n",
+       " 1,\n",
+       " -1,\n",
+       " 1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -3,\n",
+       " 1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -3,\n",
+       " -1,\n",
+       " -3,\n",
+       " -3,\n",
+       " -5]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result[4][129-32:]"
+    "result[-2]"
    ]
   },
   {
@@ -183,8 +522,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "id": "09300a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[], [], [], [], []]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#이렇게 생긴 리스트를 만들고 싶어요.\n",
+    "wishList = [[],[],[],[],[]]\n",
+    "\n",
+    "\n",
+    "#방법1\n",
+    "testList1 = [[]*5]\n",
+    "#[[]]\n",
+    "#print(testList1) \n",
+    "\n",
+    "# list index out of range\n",
+    "#print(testList1[3]) \n",
+    "\n",
+    "#방법2\n",
+    "testList2 = [[] for i in range(5)]\n",
+    "# [[]]\n",
+    "print(testList2) \n",
+    "\n",
+    "# list index out of range\n",
+    "print(testList2[3]) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6881e095",
    "metadata": {},
    "outputs": [],
    "source": []
