--- a/coding_test/dfsdfs_postNumber.ipynb
+++ b/coding_test/dfsdfs_postNumber.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "080afcfa",
    "metadata": {},
    "outputs": [
@@ -26,10 +26,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "123\n",
-      "123\n",
-      "123\n"
+      "7\n",
+      "0110100\n",
+      "0110100\n",
+      "0110100\n",
+      "0110100\n",
+      "0110100\n",
+      "0110100\n",
+      "0110100\n"
      ]
     }
    ],
@@ -38,6 +42,7 @@
     "post = []\n",
     "postNumber = []\n",
     "houseList = []\n",
+    "postLoc = []\n",
     "for i in range(n):\n",
     "    post.append(input())\n",
     "\n",
@@ -55,17 +60,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "20fb96f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[0, 0], [1, 0], [2, 0]]"
+       "[[0, 1],\n",
+       " [0, 2],\n",
+       " [0, 4],\n",
+       " [1, 1],\n",
+       " [1, 2],\n",
+       " [1, 4],\n",
+       " [2, 1],\n",
+       " [2, 2],\n",
+       " [2, 4],\n",
+       " [3, 1],\n",
+       " [3, 2],\n",
+       " [3, 4],\n",
+       " [4, 1],\n",
+       " [4, 2],\n",
+       " [4, 4],\n",
+       " [5, 1],\n",
+       " [5, 2],\n",
+       " [5, 4],\n",
+       " [6, 1],\n",
+       " [6, 2],\n",
+       " [6, 4]]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "id": "709c6ad4",
    "metadata": {},
    "outputs": [
@@ -84,7 +109,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', 'v', '0', '1', '1', '1', '1', '1', '0'], ['0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', 'v', '0', '1', '1', '1', '1', '1', '0'], ['0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', 'v', '0', '1', '1', '1', '1', '1', '0'], ['0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', 'v', '0', '1', '1', '1', '1', '1', '0'], ['0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', 'v', '0', '1', '1', '1', '1', '1', '0'], ['0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', 'v', '0', '1', '1', '1', '1', '1', '0'], ['0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', '0', '1', '1', '1', '1', '1', '0', 'v', '0', '1', '1', '1', '1', '1', '0']]\n"
+      "[['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0']]\n"
      ]
     }
    ],
@@ -94,8 +119,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "b0df41c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, item in enumerate(postNumber) :\n",
+    "    for idx2, item2 in enumerate(item):\n",
+    "        if item2 == '1':\n",
+    "            postLoc.append((idx,idx2))\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "58a7373a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1),\n",
+       " (0, 2),\n",
+       " (0, 4),\n",
+       " (1, 1),\n",
+       " (1, 2),\n",
+       " (1, 4),\n",
+       " (2, 1),\n",
+       " (2, 2),\n",
+       " (2, 4),\n",
+       " (3, 1),\n",
+       " (3, 2),\n",
+       " (3, 4),\n",
+       " (4, 1),\n",
+       " (4, 2),\n",
+       " (4, 4),\n",
+       " (5, 1),\n",
+       " (5, 2),\n",
+       " (5, 4),\n",
+       " (6, 1),\n",
+       " (6, 2),\n",
+       " (6, 4)]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "postLoc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b21a373",
    "metadata": {},
    "outputs": [],
    "source": []
