--- a/coding_test/dfsdfs_postNumber.ipynb
+++ b/coding_test/dfsdfs_postNumber.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 146,
    "id": "080afcfa",
    "metadata": {},
    "outputs": [
@@ -28,21 +28,31 @@
      "text": [
       "7\n",
       "0110100\n",
-      "0110100\n",
-      "0110100\n",
-      "0110100\n",
-      "0110100\n",
-      "0110100\n",
-      "0110100\n"
+      "0110101\n",
+      "1110101\n",
+      "0000111\n",
+      "0100000\n",
+      "0111110\n",
+      "0111000\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "8\n",
+      "7\n",
+      "2\n"
      ]
     }
    ],
    "source": [
+    "from collections import deque\n",
     "n = int(input())\n",
     "post = []\n",
     "postNumber = []\n",
     "houseList = []\n",
-    "postLoc = []\n",
+    "visitCheck = {}\n",
+    "villList = []\n",
+    "cnt = 0\n",
+    "\n",
     "for i in range(n):\n",
     "    post.append(input())\n",
     "\n",
@@ -50,132 +60,135 @@
     "    postNum = []\n",
     "    for j, n in enumerate(num):\n",
     "        postNum.append(n)\n",
-    "    postNumber.append(postNum)\n",
+    "    postNumber.append(postNum) # 각 원소를 list하나씩 담기\n",
     "    \n",
-    "for i in range(len(postNumber)):\n",
+    "for i in range(len(postNumber)): #1인 곳의 좌표\n",
     "    for idx, house in enumerate(postNumber[i]):\n",
     "        if house == '1':\n",
-    "            houseList.append([i,idx])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "20fb96f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1],\n",
-       " [0, 2],\n",
-       " [0, 4],\n",
-       " [1, 1],\n",
-       " [1, 2],\n",
-       " [1, 4],\n",
-       " [2, 1],\n",
-       " [2, 2],\n",
-       " [2, 4],\n",
-       " [3, 1],\n",
-       " [3, 2],\n",
-       " [3, 4],\n",
-       " [4, 1],\n",
-       " [4, 2],\n",
-       " [4, 4],\n",
-       " [5, 1],\n",
-       " [5, 2],\n",
-       " [5, 4],\n",
-       " [6, 1],\n",
-       " [6, 2],\n",
-       " [6, 4]]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "houseList"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "709c6ad4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0'], ['0', '1', '1', '0', '1', '0', '0']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(postNumber)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "b0df41c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for idx, item in enumerate(postNumber) :\n",
-    "    for idx2, item2 in enumerate(item):\n",
-    "        if item2 == '1':\n",
-    "            postLoc.append((idx,idx2))\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "58a7373a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 1),\n",
-       " (0, 2),\n",
-       " (0, 4),\n",
-       " (1, 1),\n",
-       " (1, 2),\n",
-       " (1, 4),\n",
-       " (2, 1),\n",
-       " (2, 2),\n",
-       " (2, 4),\n",
-       " (3, 1),\n",
-       " (3, 2),\n",
-       " (3, 4),\n",
-       " (4, 1),\n",
-       " (4, 2),\n",
-       " (4, 4),\n",
-       " (5, 1),\n",
-       " (5, 2),\n",
-       " (5, 4),\n",
-       " (6, 1),\n",
-       " (6, 2),\n",
-       " (6, 4)]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "postLoc"
+    "            houseList.append((i,idx))\n",
+    "            visitCheck[(i,idx)] = False\n",
+    "            \n",
+    "def findVill(a,b,cnt):\n",
+    "    cnt += 1\n",
+    "    villDict[villCnt] = cnt\n",
+    "    if visitCheck[(a,b)] == False:\n",
+    "        visitCheck[(a,b)] = True\n",
+    "        if (a-1,b) in houseList and visitCheck[(a-1,b)] == False :\n",
+    "            findVill(a-1,b,cnt)\n",
+    "            \n",
+    "        elif (a+1,b) in houseList and visitCheck[(a+1,b)] == False :\n",
+    "            findVill(a+1,b,cnt)\n",
+    "            \n",
+    "        elif (a,b-1) in houseList and visitCheck[(a,b-1)] == False :\n",
+    "            findVill(a,b-1,cnt)\n",
+    "            \n",
+    "        elif (a,b+1) in houseList and visitCheck[(a,b+1)] == False:\n",
+    "            findVill(a,b+1,cnt)\n",
+    "    \n",
+    "    return cnt\n",
+    "    \n",
+    "    \n",
+    "# findVill(houseList[0][0],houseList[0][1],0)\n",
+    "villCnt = 0\n",
+    "villDict = {}\n",
+    "while list(visitCheck.values()).count(True) != len(houseList):\n",
+    "    for i in houseList :\n",
+    "        villCnt += 1\n",
+    "#         print(\"villCnt\",villCnt)\n",
+    "        findVill(i[0],i[1],0)\n",
+    "#         villDict[villCnt] = findVill(i[0],i[1],0)\n",
+    "        \n",
+    "#         print(\"villCnt\",villCnt)\n",
+    "#         findVill(i[0],i[1],0)\n",
+    "villSum = deque()\n",
+    "answerCnt = 0\n",
+    "for i in villDict.values():\n",
+    "    if i != 1:\n",
+    "        answerCnt += 1\n",
+    "        villSum.append(i)\n",
+    "#         print(i)\n",
+    "print(answerCnt)\n",
+    "for i in range(len(villSum)):\n",
+    "    print(villSum.popleft())\n",
+    "#1110101"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b21a373",
+   "id": "94ed1732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "7\n",
+    "0110100\n",
+    "0110101\n",
+    "1110101\n",
+    "0000111\n",
+    "0100000\n",
+    "0111110\n",
+    "0111000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "e1de96d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1,\n",
+       " 2: 1,\n",
+       " 3: 1,\n",
+       " 4: 1,\n",
+       " 5: 1,\n",
+       " 6: 1,\n",
+       " 7: 1,\n",
+       " 8: 1,\n",
+       " 9: 1,\n",
+       " 10: 1,\n",
+       " 11: 1,\n",
+       " 12: 1,\n",
+       " 13: 1,\n",
+       " 14: 1,\n",
+       " 15: 1,\n",
+       " 16: 1,\n",
+       " 17: 1,\n",
+       " 18: 1,\n",
+       " 19: 1,\n",
+       " 20: 1,\n",
+       " 21: 1,\n",
+       " 22: 1,\n",
+       " 23: 1,\n",
+       " 24: 1,\n",
+       " 25: 1,\n",
+       " 26: 1,\n",
+       " 27: 1,\n",
+       " 28: 1,\n",
+       " 29: 1,\n",
+       " 30: 1,\n",
+       " 31: 1,\n",
+       " 32: 1,\n",
+       " 33: 1,\n",
+       " 34: 1,\n",
+       " 35: 1}"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "villDict1110101"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db9df6fe",
    "metadata": {},
    "outputs": [],
    "source": []
