--- a/coding_test/twoPointer_sum.ipynb
+++ b/coding_test/twoPointer_sum.ipynb
@@ -2,19 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4206e936",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "4 2\n",
-    "1 1 1 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e04c1bf1",
+   "execution_count": 70,
+   "id": "19f72627",
    "metadata": {},
    "outputs": [
     {
@@ -23,29 +12,40 @@
      "text": [
       "4 2\n",
       "1 1 1 1\n",
-      "0 번째 수 ( 1 ) +  3 번째 수 ( 1 )\n",
-      "1 번째 수 ( 1 ) +  2 번째 수 ( 1 )\n"
+      "3\n"
      ]
     }
    ],
    "source": [
     "n, s = list(map(int,input().split()))\n",
     "numbers = list(map(int,input().split()))\n",
-    "l, r = 0, len(numbers) - 1\n",
-    "while l <= r:\n",
-    "    if numbers[l] + numbers[r] > s:\n",
-    "        r -= 1\n",
-    "    elif numbers[l] + numbers[r] < s:\n",
-    "        l += 1\n",
-    "    elif numbers[l] + numbers[r] == s:\n",
-    "        r -= 1\n",
-    "        l += 1"
+    "l, r = 0, 0\n",
+    "res = numbers[0]\n",
+    "cnt = 0\n",
+    "\n",
+    "while l >= r and l < n:\n",
+    "    \n",
+    "    res = sum(numbers[r:l+1])\n",
+    "    \n",
+    "    if res < s :\n",
+    "        l +=1\n",
+    "    elif res > s:\n",
+    "        r +=1\n",
+    "        l = r\n",
+    "    elif res == s :\n",
+    "        cnt +=1 \n",
+    "        r +=1\n",
+    "        l = r\n",
+    "print(cnt)\n",
+    "\n",
+    "# 5 5 \n",
+    "# 4 5 2 3 6"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de2652e5",
+   "id": "3ea31f51",
    "metadata": {},
    "outputs": [],
    "source": []
