dp_stairs_using_while

--- a/coding_test/dp_stairs.ipynb
+++ b/coding_test/dp_stairs.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "6d70d03f",
    "metadata": {},
    "outputs": [
@@ -46,16 +46,24 @@
     "for i in range(n):\n",
     "    scores.append(int(input()))\n",
     "    \n",
-    "ans = scores[-1]\n",
-    "for i in range(2,n):\n",
-    "    maxVal = max(scores[-i], scores[-i-1])\n",
-    "    ans += maxVal\n",
+    "ans = scores[-1] #마지막 계단은 필수로 밟아야 함.\n",
+    "i = 2\n",
+    "\n",
+    "while i != n :\n",
+    "    if scores[-i] >= scores[-i-1]:\n",
+    "        ans += scores[-i]\n",
+    "        \n",
+    "    elif scores[-i] < scores[-i-1]:\n",
+    "        ans += scores[-i-1]\n",
+    "        i += 1\n",
+    "    i += 1\n",
+    "\n",
     "print(scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9853fcaf",
    "metadata": {},
    "outputs": [
@@ -65,7 +73,7 @@
        "100"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,21 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8b4266c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1 - 1 - 2\n",
-    "# 2 - 1 - 1 \n",
-    "두번 1 1 하면 2해야됨\n",
-    "마지막부터 시작"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "4b02673d",
+   "id": "d7417967",
    "metadata": {},
    "outputs": [],
    "source": []
