dp_stairs_using_while

--- a/coding_test/dp_stairs.ipynb
+++ b/coding_test/dp_stairs.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "6d70d03f",
    "metadata": {},
    "outputs": [
@@ -28,42 +28,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
+      "5\n",
       "10\n",
       "20\n",
-      "15\n",
-      "25\n",
-      "10\n",
-      "20\n",
-      "[10, 20, 15, 25, 10, 20]\n"
+      "30\n",
+      "40\n",
+      "50\n",
+      "90\n"
      ]
     }
    ],
    "source": [
     "n = int(input())\n",
     "scores = []\n",
+    "scores.append(0)\n",
     "ans = 0\n",
     "for i in range(n):\n",
     "    scores.append(int(input()))\n",
+    "\n",
     "    \n",
     "ans = scores[-1] #마지막 계단은 필수로 밟아야 함.\n",
-    "i = 2\n",
+    "i = 3\n",
+    "one = False\n",
+    "while i != n+1 : \n",
+    "    if not one : \n",
+    "        if scores[-i] >= scores[-(i+1)]:\n",
+    "            ans += scores[-i]\n",
+    "#             print(\"scores[-i] : \", scores[-i])\n",
+    "            one = True\n",
     "\n",
-    "while i != n :\n",
-    "    if scores[-i] >= scores[-i-1]:\n",
-    "        ans += scores[-i]\n",
-    "        \n",
-    "    elif scores[-i] < scores[-i-1]:\n",
-    "        ans += scores[-i-1]\n",
+    "        elif scores[-i] < scores[-i-1]:\n",
+    "            ans += scores[-(i+1)]\n",
+    "#             print(\"scores[-(i+1)] : \",scores[-(i+1)])\n",
+    "            i += 1\n",
     "        i += 1\n",
-    "    i += 1\n",
-    "\n",
-    "print(scores)"
+    "    elif one :\n",
+    "        ans += scores[-(i+1)]\n",
+    "        i += 2\n",
+    "        \n",
+    "# print(scores)\n",
+    "print(ans)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "9853fcaf",
    "metadata": {},
    "outputs": [
@@ -73,22 +82,45 @@
        "100"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(scores)"
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e5e65353",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 10, 20, 30, 40, 50]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7417967",
+   "id": "47455736",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##"
+   ]
   }
  ],
  "metadata": {
