--- a/coding_test/dp_stairs.ipynb
+++ b/coding_test/dp_stairs.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "6d70d03f",
    "metadata": {},
    "outputs": [
@@ -29,12 +29,12 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "90\n"
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "9\n"
      ]
     }
    ],
@@ -48,9 +48,10 @@
     "\n",
     "    \n",
     "ans = scores[-1] #마지막 계단은 필수로 밟아야 함.\n",
-    "i = 3\n",
+    "i = 2\n",
     "one = False\n",
     "while i != n+1 : \n",
+    "#     print(\"I am i : \", i)\n",
     "    if not one : \n",
     "        if scores[-i] >= scores[-(i+1)]:\n",
     "            ans += scores[-i]\n",
@@ -61,34 +62,26 @@
     "            ans += scores[-(i+1)]\n",
     "#             print(\"scores[-(i+1)] : \",scores[-(i+1)])\n",
     "            i += 1\n",
+    "            one = False\n",
     "        i += 1\n",
-    "    elif one :\n",
-    "        ans += scores[-(i+1)]\n",
-    "        i += 2\n",
     "        \n",
+    "    elif one :\n",
+    "        if i < n :\n",
+    "            ans += scores[-(i+1)]\n",
+    "            i += 2\n",
+    "        else :\n",
+    "            ans += scores[-i]\n",
+    "            break\n",
     "# print(scores)\n",
     "print(ans)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "9853fcaf",
+   "cell_type": "markdown",
+   "id": "488aab32",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "ans"
+    "## ans"
    ]
   },
   {
