--- a/coding_test/dp_stairs.ipynb
+++ b/coding_test/dp_stairs.ipynb
@@ -78,25 +78,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "488aab32",
+   "id": "ca25b44a",
    "metadata": {},
    "source": [
-    "## ans"
+    "ans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "e5e65353",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 10, 20, 30, 40, 50]"
+       "[0, 5, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,13 +107,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "47455736",
    "metadata": {},
    "outputs": [],
    "source": [
-    "##"
+    "#a"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e956cae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "1\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "57\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "stairs = [0] + [int(input()) for _ in range(n)] + [0]\n",
+    "cache = [0] * (n+2)\n",
+    "cache[1] = stairs[1]\n",
+    "cache[2] = cache[1] + stairs[2]\n",
+    "\n",
+    "for i in range(3, n+1):\n",
+    "    cache[i] = max(cache[i-2], cache[i-3] + stairs[i-1]) + stairs[i]\n",
+    "print(cache[n])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adda5692",
+   "metadata": {},
+   "source": [
+    "#### "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595e86c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
